# backend_led

./: .gitignore  Dockerfile  FEATURES_STATUS_REPORT.md  FIX_HOTSPOT_WPA2.md  HUONG_DAN_RESET_DATABASE.md  MQTT_SETUP_GUIDE.md  SCHEDULE_IMPLEMENTATION_GUIDE.md  clean_duplicate_devices.py  create_default_device.py  docker-compose.yml  fix_duplicate_sql.py  insert_default_device.sql  install_postgresql.bat  keep_backend_alive.py  pom.xml  render.yaml  reset_database.sql  run_backend_local.bat  run_backend_render.bat  run_backend_simple.bat  setup_database.bat  setup_mqtt_local.bat  setup_mqtt_windows.bat  start_mqtt.bat  test_backend_status.py  test_db_connection.py  test_static_ip_mqtt.py
.github/workflows/: build-ios.yml
Relay/: CMakeLists.txt  HUONG_DAN_KIEM_TRA_BLUETOOTH.md  build_and_flash.bat  build_keep_wifi.bat  build_with_voice.bat  check_bluetooth.bat  check_esp_status.py  check_mqtt_status.py  erase_and_flash.bat  erase_nvs.bat  erase_wifi_only.bat  force_erase.bat  force_reset_wifi.py  monitor_mqtt.bat  partitions.csv  reset_esp32_wifi.py  reset_wifi.py  sdkconfig.defaults  sdkconfig.old  test_mqtt.py  test_mqtt_quick.py  test_voice_commands.md  text.txt  ver2.txt
Relay/main/: CMakeLists.txt  blink_example_main.c  http_client.c  http_client.h  idf_component.yml  voice_control.c  voice_control.h
backend_led/: Dockerfile  pom.xml  seed_database.bat  seed_database.sql
dashboard_web/: index.html  package-lock.json  package.json
dashboard_web/src/: App.css  App.jsx  index.css
dashboard_web/src/components/: LoginPage.jsx  (+3 more)
mosquitto/config/: mosquitto.conf
(+88 files in other folders)
